完善阶段1逻辑